# DAP

./: README.md  flightPlan.mavlink
Drone-NodeJS/: drone.js  flightPlan.mavlink  flightplan.js  flightplan_parms.js  ftp.py  startDrone.py  startDrone.py~  startDrone_parms.py
Drone-NodeJS/DroneCom/DroneCom/: DroneCom.sln
Drone/NodeJS/: MainWithMenu.js  emergency.js  first.js  mavLinkTest.js  readMe.txt  retrieveGpsCoordinates.js
OpenCV/: README.txt
OpenCV/ProjectImgAlgorithm/: flightplan-demo.js  flightplan.js  ftp.py  startDrone.py  wathcfolder.cpp
OpenCV/ProjectImgAlgorithm/calibration/: calibration.cpp
OpenCV/ProjectImgAlgorithm/visualization/: CMakeLists.txt  Roads.cpp  RoadsLib.cpp  calibrateRoad.cpp  findCarsContours.cpp
Projecto/: README.txt
Projecto/ProjectImgAlgorithm/: CIAQ10m linearDistance.xlsx  CMakeLists.txt~  README.txt  drone.js~  flightPlan_16.mavlink  flightplan.js  ftp.py~  makefile~  startDrone.py  startDrone.py~
Projecto/ProjectImgAlgorithm/calibration/: CMakeLists.txt  CMakeLists.txt~
Projecto/drone-springserver/: pom.xml  run.txt
Projecto/drone-springserver/public/: index.html  (+1 more)
RESTFull/: ProjectDrone.json.postman_collection
RabbitMQ-client/: nb-configuration.xml  nbactions-RecLogsTopic.xml  nbactions-release-profile.xml  nbactions.xml  pom.xml
drone-client/: pom.xml
mySQL/: dbDrone.mwb  dbDrone.mwb.bak  dbDroneScript.sql  db_backup.sql  insertValues.sql
restcpp/: .makefile.swp  rest.cpp  test
watchFolder/: README.txt
watchFolder/watchFolderDemo/: build.xml
watchFolder/watchfolderProjecto/: .cproject  .project
(+138 files in other folders)
